[gd_scene load_steps=2 format=2]

[ext_resource path="res://atividade2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ListaPreenchida" type="Button" parent="."]
margin_left = 93.0
margin_top = 78.0
margin_right = 245.0
margin_bottom = 150.0
text = "lista preenchida"

[node name="ListaVazia" type="Button" parent="."]
margin_left = 90.0
margin_top = 195.0
margin_right = 242.0
margin_bottom = 267.0
text = "lista vazia"

[node name="TextoPronto" type="Button" parent="."]
margin_left = 86.0
margin_top = 327.0
margin_right = 238.0
margin_bottom = 399.0
text = "texto pronto"

[node name="TextoInserido" type="Button" parent="."]
margin_left = 85.0
margin_top = 458.0
margin_right = 237.0
margin_bottom = 530.0
text = "texto inserido"

[node name="lista1" type="Label" parent="."]
margin_left = 294.0
margin_top = 79.0
margin_right = 426.0
margin_bottom = 152.0

[node name="lista2" type="Label" parent="."]
margin_left = 520.0
margin_top = 193.0
margin_right = 652.0
margin_bottom = 266.0

[node name="texto1" type="Label" parent="."]
margin_left = 296.0
margin_top = 326.0
margin_right = 428.0
margin_bottom = 399.0

[node name="texto2" type="Label" parent="."]
margin_left = 507.0
margin_top = 462.0
margin_right = 639.0
margin_bottom = 535.0

[node name="insira_lista" type="LineEdit" parent="."]
margin_left = 298.0
margin_top = 186.0
margin_right = 430.0
margin_bottom = 271.0

[node name="insira_texto" type="LineEdit" parent="."]
margin_left = 296.0
margin_top = 446.0
margin_right = 428.0
margin_bottom = 531.0

[connection signal="pressed" from="ListaPreenchida" to="." method="_on_ListaPreenchida_pressed"]
[connection signal="pressed" from="ListaVazia" to="." method="_on_ListaVazia_pressed"]
[connection signal="pressed" from="TextoPronto" to="." method="_on_TextoPronto_pressed"]
[connection signal="pressed" from="TextoInserido" to="." method="_on_TextoInserido_pressed"]
